tests/errors/type_mismatch_multiplication.dang
# Test multiplication type mismatch
let result = "hello" * 42
